--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,10 @@ dependencies {
     compile "com.fasterxml.jackson.core:jackson-core:2.9.0"
     compile "com.fasterxml.jackson.core:jackson-databind:2.9.0"
     compile "io.reactivex:rxjava:1.3.2"
-    compileOnly 'org.projectlombok:lombok:1.18.4'
-    compile 'com.squareup.okhttp3:okhttp:3.12.0'
+    compile "com.squareup.okhttp3:okhttp:3.12.0"
+    compileOnly "org.projectlombok:lombok:1.18.4"
 
+    testCompile "com.github.tomakehurst:wiremock:2.19.0"
     testCompile "junit:junit:4.12"
     testCompile "org.mockito:mockito-core:2.23.4"
     testCompile "org.mockito:mockito-inline:2.23.4"
